--- a/formula_one/exploring_lap_times.ipynb
+++ b/formula_one/exploring_lap_times.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,22 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read in the data - Here, we are assuming that the data is in the same directory,\n",
     "# but this can be changed to point to where the files are stored locally\n",
     "results = pd.read_csv('results.csv')\n",
-    "races = pd.read_csv('races.csv')\n",
-    "constructors = pd.read_csv('constructors.csv')\n",
-    "lap_times = pd.read_csv('lap_times.csv')\n",
-    "drivers = pd.read_csv('drivers.csv')"
+    "lap_times = pd.read_csv('lap_times.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
